--- a/intex.html
+++ b/intex.html
@@ -93,7 +93,8 @@
         <div class="audio-player-container p-4 mb-8 rounded-xl w-full md:w-3/4 lg:w-2/3 mx-auto">
             <h3 class="text-xl font-semibold text-white mb-3">Phase 0 Audio Overview</h3>
             <div class="custom-audio-player flex items-center gap-4">
-                <audio id="audioPlayer" src="P0audio.mp3" preload="auto"></audio>
+                <!-- Corrected audio source to Genesis_audio.mp3 -->
+                <audio id="audioPlayer" src="Genesis_audio.mp3" preload="auto"></audio>
                 <button id="playPauseBtn" class="play-pause-btn w-12 h-12 rounded-full flex items-center justify-center flex-shrink-0 transition-colors">
                     <i id="playPauseIcon" class="fas fa-play text-xl"></i>
                 </button>
